# oil-splitter

./: .env.example  .gitignore  API_Contract.md  Markering and Splitting.ipynb  PRD.md  TODO.md  docker-compose.yml  plan.md
backend/: .env  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0cd50c3c8ec1_add_sheet_name_to_data_files.py  2514c22a7e7f_add_original_filename_to_data_files.py  2eddd8894bb6_create_projects_and_datasets_tables.py  36511212eca6_initial_schema.py  527e0716ad77_add_status_to_execution_history.py  a934e942eaba_create_users_table.py  e02a9df74790_add_marker_preview_to_split_runs.py  e5a9bfd68e9e_create_split_runs_table.py
backend/app/: database.py  dependencies.py  main.py  models.py  schemas.py  security.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  datasets.py  projects.py  router.py  split_runs.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  dataset.py  project.py  split_run.py  user.py
backend/app/routers/: auth.py  projects.py
backend/app/schemas/: __init__.py  dataset.py  project.py  split_run.py  user.py
backend/app/services/: __init__.py  engine.py  gap_filler.py  ingestion.py  marker_engine.py  run_executor.py  splitter_engine.py
backend/tests/: test_gap_filler.py  test_ingestion.py  test_marker_engine.py  test_run_executor.py  test_splitter_engine.py
backend/uploads/a9da01e2-4536-421e-9f77-bdc769e96d8e/: lumping.xlsx
frontend/: .cta.json  package.json  pnpm-lock.yaml
(+46 files in other folders)
